--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -76,3 +76,29 @@ textarea
     padding: 1em;
     
 }
+
+.view-restaurant-cont
+{
+    border: 1px solid red;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+}
+
+.view-restaurant-image
+{
+    height: 400px;
+    width: 450px;
+    margin-right: 1em;
+    min-height: 350px;
+    height: 100%;
+}
+
+.view-restaurant-desc
+{
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+}
