--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -9,6 +9,11 @@ body.login
     background-color: #750808;
     color: #fff;
 }
+.navview.expanded-lg .navview-content
+{
+    overflow: auto;
+}
+
 
 .navview.expanded-lg .navview-content
 {
@@ -56,7 +61,7 @@ body.login
 
 
 #map {
-    height: 700px;
+    height: 600px;
     width: 100%;
     border: 1px solid #e5e5e5;
    }
