--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -14,6 +14,15 @@ body.login
     overflow: auto;
 }
 
+div.label
+{
+    padding: 2px 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 13px;
+}
 
 .navview.expanded-lg .navview-content
 {
